--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <title>A Magix Web Application</title>
     </head>
     <body>
-    	<br/><a href="#!/home/">home</a>&nbsp;&nbsp;<a href="#!/others/">others</a>
+        <br/>
+        <a href="#!/home/">home</a>&nbsp;&nbsp;<a href="#!/others/">others</a>&nbsp;&nbsp;<a href="#!/home/a=b&c=d">homepara</a>
         <!--引入seajs作为带依赖关系的异步模块管理类库,参见:http://seajs.com-->
         <script type="text/javascript" src="libs/seajs/sea-debug.js">
         </script>
