add template & fix queryModel chg

--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     </head>
     <body>
         <br/>
-        <a href="#!/home/">home</a>&nbsp;&nbsp;<a href="#!/others/">others</a>&nbsp;&nbsp;<a href="#!/home/a=b&c=d">homepara</a>
+        <a href="#!/home/">home</a>&nbsp;&nbsp;<a href="#!/home/a=b&c=d">homepara</a>&nbsp;&nbsp;<a href="#!/404/">404</a>&nbsp;&nbsp;<a href="#!/test/">test</a>
+		<br/>
+		<br/>
+		<br/>
+		<a href="#!/others/">others</a>
         <!--引入seajs作为带依赖关系的异步模块管理类库,参见:http://seajs.com-->
         <script type="text/javascript" src="libs/seajs/sea-debug.js">
         </script>
