support nested mxvc element

--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
         <title>A Magix Web Application</title>
     </head>
     <body>
+    	<br/>
+    	<a href="#!/colors/">colors</a>
         <br/>
-        <a href="#!/home/">home</a>&nbsp;&nbsp;<a href="#!/home/a=b&c=d">homepara</a>&nbsp;&nbsp;<a href="#!/404/">404</a>&nbsp;&nbsp;<a href="#!/test/">test</a>
-		<br/>
+        <br/>
+		<a href="#!/home/">home</a>&nbsp;&nbsp;<a href="#!/home/a=b&c=d">homepara</a>&nbsp;&nbsp;<a href="#!/404/">404</a>&nbsp;&nbsp;<a href="#!/test/">test</a>
 		<br/>
 		<br/>
 		<a href="#!/others/">others</a>
