upgrade seajs to 0.9.1

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<br/>
 		<a href="#!/others/">others</a>
         <!--引入seajs作为带依赖关系的异步模块管理类库,参见:http://seajs.com-->
-        <script type="text/javascript" src="libs/seajs/sea-debug.js">
+        <script type="text/javascript" src="libs/seajs/sea-debug.js?0.9.1">
         </script>
         <!--当前App启动脚本-->
         <script type="text/javascript" src="index.js">
