try nest view & fix some typo

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
     	<br/>
-    	<a href="#!/colors/">colors</a>
+    	<a href="#!/colors/">colors</a>&nbsp;&nbsp;<a href="#!/colors/a=1">colorsA</a>
         <br/>
         <br/>
 		<a href="#!/home/">home</a>&nbsp;&nbsp;<a href="#!/home/a=b&c=d">homepara</a>&nbsp;&nbsp;<a href="#!/404/">404</a>&nbsp;&nbsp;<a href="#!/test/">test</a>
