safe view destory & vc unmount & vc removeNode

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>A Magix Web Application</title>
     </head>
     <body>
+    	<button onclick="MXRootView.destory()">view unload</button>
     	<br/>
     	<a href="#!/colors/">colors</a>&nbsp;&nbsp;<a href="#!/colors/a=1">colorsA</a>
         <br/>
