support nested view & chained QMchange event

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <title>A Magix Web Application</title>
     </head>
     <body>
-        <button onclick="MXRootView.destory()">
-            view unload
-        </button>
+    	<br/>
+    	<br/>
+        <a href="#!/demo/card/">card</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#!/demo/list/">list</a>
         <br/>
         <a href="#!/colors/">colors</a>&nbsp;&nbsp;<a href="#!/colors/a=1">colorsA</a>
         <br/>
