--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
         <title>A Magix Web Application</title>
     </head>
     <body>
-    	<br/>
-    	<br/>
+        <br/>
+		<br/>
+        <a href="#!/target/a/">target id</a>
+        <br/>
+        <br/>
         <a href="#!/demo/card/">card</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#!/demo/list/">list</a>
         <br/>
         <a href="#!/colors/">colors</a>&nbsp;&nbsp;<a href="#!/colors/a=1">colorsA</a>
@@ -21,37 +24,6 @@
         </script>
         <!--当前App启动脚本-->
         <script type="text/javascript" src="index.js">
-            seajs.use("backbone", function(bb){
-				debugger;
-                z = new bb.Model({
-                    a: 1,
-                    b: 1
-                });
-				z.bind("change:a",function(){
-					console.log("a");
-				});
-				z.bind("change:b",function(){
-					console.log("b");
-				});
-				z.bind("change:c",function(){
-					console.log("c");
-				});
-				z.bind("change",function(){
-					console.log("all");
-					console.log(z.changedAttributes());
-				});
-				nz = {a:2,c:3};
-				oz = z.toJSON();
-				for(k in oz){
-					if(!(k in nz)){
-						z.unset(k);
-					}
-				}
-				z.set(nz);
-				z.change();
-				z.change();
-				z.change();
-            });
         </script>
     </body>
 </html>
