mxvc via attr 'link_to' proxyto other node

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>A Magix Web Application</title>
     </head>
     <body>
+    	<div id="linking"></div>
         <br/>
 		<br/>
         <a href="#!/target/a/">target id</a>
