add message event for view & extend mu list

--- a/index.html
+++ b/index.html
@@ -1,30 +1,20 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <meta charset="utf-8">
         <title>A Magix Web Application</title>
     </head>
     <body>
         <div id="linking">
         </div>
-        <br/>
-        <br/>
-        <a href="#!/target/a/">target id</a>
-        <br/>
-        <br/>
-        <a href="#!/demo/card/">card</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#!/demo/list/">list</a>
-        <br/>
-        <a href="#!/colors/">colors</a>&nbsp;&nbsp;<a href="#!/colors/a=1">colorsA</a>
-        <br/>
-        <br/>
-        <a href="#!/home/">home</a>&nbsp;&nbsp;<a href="#!/home/a=b&c=d">homepara</a>&nbsp;&nbsp;<a href="#!/404/">404</a>&nbsp;&nbsp;<a href="#!/test/">test</a>
-        <br/>
-        <br/>
-        <a href="#!/others/">others</a>
-        <!--引入seajs作为带依赖关系的异步模块管理类库,参见:http://seajs.com-->
-        <script type="text/javascript" src="libs/seajs/sea-debug.js?0.9.1">
+        <a href="#!/home/">home</a>&nbsp;&nbsp;<a href="#!/test/">test</a>
+        <script type="text/javascript" src="jquery.js">
         </script>
-        <!--当前App启动脚本-->
+        <script type="text/javascript" src="json2.js">
+        </script>
+        <script type="text/javascript" src="underscore.js">
+        </script>
+        <script type="text/javascript" src="backbone.js">
+        </script>
         <script type="text/javascript" src="index.js">
         </script>
     </body>
