--- a/examples/hellomagix/index.html
+++ b/examples/hellomagix/index.html
@@ -1,35 +1,34 @@
 <!DOCTYPE HTML>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>Hello Magix!</title>
-    </head>
-    <body>
-    	<br/>
-        <a href="#!/home/">home</a>&nbsp;&nbsp;<a href="#!/test/">test</a>
-        <script type="text/javascript" src="../../libs/seajs/sea.js?0.9.3">
-        </script>
-        <script type="text/javascript" src="../../libs/magix/magix.js">
-        </script>
-        <script type="text/javascript">
-            (function(){
-                //当前页面路径
-                var currentPagePath = location.href.split("#")[0].split("index.html")[0];
-                //seajs配置
-                //通过alies配置top-level模块采用debug版本,配置appp,config,libs的实际地址
-                seajs.config({
-                    alias: {
-                        'app': currentPagePath + 'app',
-                        'libs': currentPagePath + '../../libs'
-                    }
-                });
-                //启动Magix
-                Magix.History.init("mxhistory.html", function(query){
-                    seajs.use(['libs/magix/controller'], function(ctrl){
-                        ctrl._route(query);
-                    });
-                });
-            })();
-        </script>
-    </body>
+	<head>
+		<meta charset="utf-8">
+		<title>Hello Magix!</title>
+	</head>
+	<body>
+		<br/>
+		<a href="#!/home/">home</a>&nbsp;&nbsp;<a href="#!/test/">test</a>
+		<script type="text/javascript" src="../../libs/sea.js"></script>
+		<script type="text/javascript" src="../../libs/magix/magix.js"></script>
+		<script type="text/javascript">
+			(function() {
+				//当前页面路径
+				var currentPagePath = location.href.split("#")[0].split("index.html")[0];
+				//seajs配置
+				//通过alies配置top-level模块采用debug版本,配置appp,config,libs的实际地址
+				seajs.config({
+					alias : {
+						'app' : currentPagePath + 'app',
+						'libs' : currentPagePath + '../../libs'
+					}
+				});
+				//启动Magix
+				Magix.History.init("mxhistory.html", function(query) {
+					seajs.use(['libs/magix/controller'], function(ctrl) {
+						ctrl._route(query);
+					});
+				});
+			})();
+
+		</script>
+	</body>
 </html>
