remove libs for top level id

--- a/examples/hellomagix/index.html
+++ b/examples/hellomagix/index.html
@@ -22,7 +22,7 @@
 				});
 				//启动Magix
 				Magix.History.init();
-				console.log(seajs._data.memoizedMods);
+				//console.log(seajs._data.memoizedMods);
 			})();
 		</script>
 	</body>
