--- a/examples/hellomagix/index.html
+++ b/examples/hellomagix/index.html
@@ -12,7 +12,7 @@
 		<script type="text/javascript">
 			(function() {
 				//当前页面路径
-				var currentPagePath = location.href.split("#")[0].split("index.html")[0];
+				var currentPagePath = location.href.split(/#|\?/)[0].split("index.html")[0];
 				//seajs配置
 				//通过alies配置top-level模块采用debug版本,配置appp,config,libs的实际地址
 				seajs.config({
