--- a/examples/hellomagix/index.html
+++ b/examples/hellomagix/index.html
@@ -7,8 +7,10 @@
 	<body>
 		<br/>
 		<a href="#!/home/">home</a>&nbsp;&nbsp;<a href="#!/test/">test</a>
-		<script type="text/javascript" src="../../libs/sea.js"></script>
-		<script type="text/javascript" src="../../libs/magix/magix.js"></script>
+		<script type="text/javascript" src="../../build/debug/sea.js"></script>
+		<script type="text/javascript" src="../../build/debug/backbone.js"></script>
+		<script type="text/javascript" src="../../build/debug/magixpkg.js"></script>
+		<script type="text/javascript" src="../../build/debug/magix/magix.js"></script>
 		<script type="text/javascript">
 			(function() {
 				//当前页面路径
