--- a/examples/01hellomagix/kissy/index.html
+++ b/examples/01hellomagix/kissy/index.html
@@ -8,12 +8,12 @@
 		<br/>
 		<a href="#!/home/a=b&c=d">home</a>&nbsp;&nbsp;<a href="#!/test/">test</a>
 		<script type="text/javascript" src="../../../libs/debug/kissy/kissy.js"></script>
-		<!--<script type="text/javascript" src="../../../src/kissy/magix/magix.js"></script>-->
-		<script type="text/javascript" src="../../../build/debug/kissy-magix-pkg.js"></script>
+		<script type="text/javascript" src="../../../src/kissy/magix/magix.js"></script>
+		<!--<script type="text/javascript" src="../../../build/debug/kissy-magix-pkg.js"></script>-->
 		<script type="text/javascript">
 			Magix.init({
-				magixHome:"http://localhost/magix/src/kissy/magix/",
-				appHome:"http://localhost/magix/examples/01hellomagix/kissy/app/"
+				magixHome:"http://localhost/magix_git/src/kissy/magix/",
+				appHome:"http://localhost/magix_git/examples/01hellomagix/kissy/app/"
 			});
 		</script>
 	</body>
