调整router vframe view vom等，新增模板引擎
Signed-off-by: xinglie <xinglie.lkf@taobao.com>

--- a/examples/01hellomagix/seajs_kissy/index.html
+++ b/examples/01hellomagix/seajs_kissy/index.html
@@ -14,7 +14,8 @@
 		<script type="text/javascript">
 			Magix.init({
 				magixHome:"http://localhost/magix/src/seajs_kissy/",
-				appHome:"http://localhost/magix/examples/01hellomagix/seajs_kissy/app/"
+				appHome:"http://localhost/magix/examples/01hellomagix/seajs_kissy/app/",
+				appPackageName:''
 			});
 			/*define("magix/test",function(require,exports,module){
 			    exports.ok=function(){
