增加CDN通知判断 细节改进
Signed-off-by: xinglie <xinglie.lkf@taobao.com>

--- a/examples/01hellomagix/kissy/index.html
+++ b/examples/01hellomagix/kissy/index.html
@@ -13,7 +13,9 @@
 		<script type="text/javascript">
 			Magix.init({
 				magixHome:"http://localhost/magix_git/src/kissy/magix/",
-				appHome:"http://localhost/magix_git/examples/01hellomagix/kissy/app/"
+				appHome:"http://localhost/magix_git/examples/01hellomagix/kissy/app/",
+				debug:true,
+				release:false
 			});
 		</script>
 	</body>
