magix对view增加extend方法，与backbone中的view继承使用方式相同。增加view与hash的绑定，只有与当前view绑定的hash有变化时，才引起这个view的queryModelChange
Signed-off-by: xinglie <xinglie.lkf@taobao.com>

--- a/examples/01hellomagix/kissy/index.html
+++ b/examples/01hellomagix/kissy/index.html
@@ -6,7 +6,11 @@
 	</head>
 	<body>
 		<br/>
-		<a href="#!/home/a=b&c=d">home</a>&nbsp;&nbsp;<a href="#!/test/">test</a>
+		<a href="#!/home/a=b&c=d&b=2">home</a>&nbsp;&nbsp;<a href="#!/home/b=2">test</a>
+
+		<a href="#!/home/a=b&c=d&b=2&d=2">test2</a>
+
+		<a href="#!/test">not found</a>
 		<script type="text/javascript" src="../../../libs/debug/kissy/kissy.js"></script>
 		<script type="text/javascript" src="../../../src/kissy/magix/magix.js"></script>
 		<!--<script type="text/javascript" src="../../../build/debug/kissy-magix-pkg.js"></script>-->
