Magix增加全局方法，供一些跨view存在的数据使用
Signed-off-by: xinglie <xinglie.lkf@taobao.com>

--- a/examples/01hellomagix/kissy/index.html
+++ b/examples/01hellomagix/kissy/index.html
@@ -15,6 +15,10 @@
 		<script type="text/javascript" src="../../../src/kissy/magix/magix.js"></script>
 		<!--<script type="text/javascript" src="../../../build/debug/kissy-magix-pkg.js"></script>-->
 		<script type="text/javascript">
+			Magix.listenGlobal(function(e){
+				console.log(e);
+			});
+			Magix.setGlobal('abc','def');
 			Magix.init({
 				magixHome:"http://localhost/magix_git/src/kissy/magix/",
 				appHome:"http://localhost/magix_git/examples/01hellomagix/kissy/app/",
