--- a/examples/ppt/index.html
+++ b/examples/ppt/index.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" type="text/css" href="theme/css/style.css" />
 	</head>
 	<body>
-		<script type="text/javascript" src="../../libs/debug/kissy/kissy.js"></script>
+		<script type="text/javascript" src="http://a.tbcdn.cn/s/kissy/1.2.0/kissy-min.js"></script>
 		<script type="text/javascript" src="libs/kissy-magix-mxext.min.js"></script>
 		<script type="text/javascript">
 			var latest;
