--- a/seed/index.html
+++ b/seed/index.html
@@ -12,8 +12,10 @@
             <span class="progress_bar_content"></span>            
         </div>
         <div id="magix_vf_root"></div>
-        <script type="text/javascript" src="http://a.tbcdn.cn/s/kissy/1.3.0/seed.js"></script>
-        <script type="text/javascript" src="http://a.tbcdn.cn/apps/e/brix/2.0/brix.js" ></script>
+        <!--<script type="text/javascript" src="http://a.tbcdn.cn/s/kissy/1.3.0/seed.js"></script>
+        <script type="text/javascript" src="http://a.tbcdn.cn/apps/e/brix/2.0/brix.js" ></script>-->
+        <script type="text/javascript" src="/kissy1.3/build/seed.js"></script>
+        <script type="text/javascript" src="/brix/dist/2.0/brix.js" bx-config="{fixed:'/dist/2.0/'}"></script>
         <script type="text/javascript" src="libs/kissy-magix-mxext.js"></script>
         <script type="text/javascript" src="app/prepare.js"></script>
         <script type="text/javascript">
@@ -23,9 +25,9 @@
                 appCombine:false,
                 appTag:'20130106',//配置加载js时的时间戳
                 debug:true,
-                appName:'~seed',
-                iniFile:'~/app/ini',
-                extensions:["~seed/app/extview"],
+                appName:'app',
+                iniFile:'app/ini',
+                extensions:["app/extview"],
                 ready:function(){
                     Magix.local("BPENV",{
                         loginUser:{
