prepare for mobile and new version

--- a/seed/index.html
+++ b/seed/index.html
@@ -28,6 +28,7 @@
                 appName:'app',
                 iniFile:'app/ini',
                 extensions:["app/extview"],
+                tagName:'div',
                 ready:function(){
                     Magix.local("BPENV",{
                         loginUser:{
