--- a/README.html
+++ b/README.html
@@ -122,47 +122,47 @@ body{font-size:16px;}
 }
 </style><title>README</title></head><body><h2 id="magixcdn">Magix各版本CDN地址</h2>
 <h4 id="11">桌面版1.1</h4>
-<p>http://a.tbcdn.cn/apps/e/magix/1.1/kissy-magix.js(KISSY类库，Magix核心未压缩版)
-http://a.tbcdn.cn/apps/e/magix/1.1/kissy-magix-min.js(KISSY类库，Magix核心压缩版)
-http://a.tbcdn.cn/apps/e/magix/1.1/kissy-magix-mxext.js(KISSY类库，Magix核心与扩展未压缩版)
-http://a.tbcdn.cn/apps/e/magix/1.1/kissy-magix-mxext-min.js(KISSY类库，Magix核心与扩展压缩版)</p>
-<p>http://a.tbcdn.cn/apps/e/magix/1.1/seajs-magix.js(sejs+jq类库，Magix核心未压缩版)
-http://a.tbcdn.cn/apps/e/magix/1.1/seajs-magix-min.js(sejs+jq类库，Magix核心压缩版)
-http://a.tbcdn.cn/apps/e/magix/1.1/seajs-magix-mxext.js(sejs+jq类库，Magix核心与扩展未压缩版)
-http://a.tbcdn.cn/apps/e/magix/1.1/seajs-magix-mxext-min.js(sejs+jq类库，Magix核心与扩展压缩版)</p>
-<p>http://a.tbcdn.cn/apps/e/magix/1.1/requirejs-magix.js(requirejs+jq类库，Magix核心未压缩版)
-http://a.tbcdn.cn/apps/e/magix/1.1/requirejs-magix-min.js(requirejs+jq类库，Magix核心压缩版)
-http://a.tbcdn.cn/apps/e/magix/1.1/requirejs-magix-mxext.js(requirejs+jq类库，Magix核心与扩展未压缩版)
-http://a.tbcdn.cn/apps/e/magix/1.1/requirejs-magix-mxext-min.js(requirejs+jq类库，Magix核心与扩展压缩版)</p>
+<p>http://a.tbcdn.cn/apps/e/magix/1.1/kissy-magix.js (KISSY类库，Magix核心未压缩版)<br />
+http://a.tbcdn.cn/apps/e/magix/1.1/kissy-magix-min.js (KISSY类库，Magix核心压缩版)<br />
+http://a.tbcdn.cn/apps/e/magix/1.1/kissy-magix-mxext.js (KISSY类库，Magix核心与扩展未压缩版)<br />
+http://a.tbcdn.cn/apps/e/magix/1.1/kissy-magix-mxext-min.js (KISSY类库，Magix核心与扩展压缩版)<br /></p>
+<p>http://a.tbcdn.cn/apps/e/magix/1.1/seajs-magix.js (sejs+jq类库，Magix核心未压缩版)<br />
+http://a.tbcdn.cn/apps/e/magix/1.1/seajs-magix-min.js (sejs+jq类库，Magix核心压缩版)<br />
+http://a.tbcdn.cn/apps/e/magix/1.1/seajs-magix-mxext.js (sejs+jq类库，Magix核心与扩展未压缩版)<br />
+http://a.tbcdn.cn/apps/e/magix/1.1/seajs-magix-mxext-min.js (sejs+jq类库，Magix核心与扩展压缩版)<br /></p>
+<p>http://a.tbcdn.cn/apps/e/magix/1.1/requirejs-magix.js (requirejs+jq类库，Magix核心未压缩版)<br />
+http://a.tbcdn.cn/apps/e/magix/1.1/requirejs-magix-min.js (requirejs+jq类库，Magix核心压缩版)<br />
+http://a.tbcdn.cn/apps/e/magix/1.1/requirejs-magix-mxext.js (requirejs+jq类库，Magix核心与扩展未压缩版)<br />
+http://a.tbcdn.cn/apps/e/magix/1.1/requirejs-magix-mxext-min.js (requirejs+jq类库，Magix核心与扩展压缩版)<br /></p>
 <h4 id="11_1">移动版1.1</h4>
-<p>http://a.tbcdn.cn/apps/e/magix/m1.1/kissy-magix.js(KISSY类库，Magix核心未压缩版)
-http://a.tbcdn.cn/apps/e/magix/m1.1/kissy-magix-min.js(KISSY类库，Magix核心压缩版)
-http://a.tbcdn.cn/apps/e/magix/m1.1/kissy-magix-mxext.js(KISSY类库，Magix核心与扩展未压缩版)
-http://a.tbcdn.cn/apps/e/magix/m1.1/kissy-magix-mxext-min.js(KISSY类库，Magix核心与扩展压缩版)</p>
-<p>http://a.tbcdn.cn/apps/e/magix/m1.1/seajs-magix.js(sejs+jq类库，Magix核心未压缩版)
-http://a.tbcdn.cn/apps/e/magix/m1.1/seajs-magix-min.js(sejs+jq类库，Magix核心压缩版)
-http://a.tbcdn.cn/apps/e/magix/m1.1/seajs-magix-mxext.js(sejs+jq类库，Magix核心与扩展未压缩版)
-http://a.tbcdn.cn/apps/e/magix/m1.1/seajs-magix-mxext-min.js(sejs+jq类库，Magix核心与扩展压缩版)</p>
-<p>http://a.tbcdn.cn/apps/e/magix/m1.1/requirejs-magix.js(requirejs+jq类库，Magix核心未压缩版)
-http://a.tbcdn.cn/apps/e/magix/m1.1/requirejs-magix-min.js(requirejs+jq类库，Magix核心压缩版)
-http://a.tbcdn.cn/apps/e/magix/m1.1/requirejs-magix-mxext.js(requirejs+jq类库，Magix核心与扩展未压缩版)
-http://a.tbcdn.cn/apps/e/magix/m1.1/requirejs-magix-mxext-min.js(requirejs+jq类库，Magix核心与扩展压缩版)</p>
+<p>http://a.tbcdn.cn/apps/e/magix/m1.1/kissy-magix.js (KISSY类库，Magix核心未压缩版)<br />
+http://a.tbcdn.cn/apps/e/magix/m1.1/kissy-magix-min.js (KISSY类库，Magix核心压缩版)<br />
+http://a.tbcdn.cn/apps/e/magix/m1.1/kissy-magix-mxext.js (KISSY类库，Magix核心与扩展未压缩版)<br />
+http://a.tbcdn.cn/apps/e/magix/m1.1/kissy-magix-mxext-min.js (KISSY类库，Magix核心与扩展压缩版)<br /></p>
+<p>http://a.tbcdn.cn/apps/e/magix/m1.1/seajs-magix.js (sejs+jq类库，Magix核心未压缩版)<br />
+http://a.tbcdn.cn/apps/e/magix/m1.1/seajs-magix-min.js (sejs+jq类库，Magix核心压缩版)<br />
+http://a.tbcdn.cn/apps/e/magix/m1.1/seajs-magix-mxext.js (sejs+jq类库，Magix核心与扩展未压缩版)<br />
+http://a.tbcdn.cn/apps/e/magix/m1.1/seajs-magix-mxext-min.js (sejs+jq类库，Magix核心与扩展压缩版)<br /></p>
+<p>http://a.tbcdn.cn/apps/e/magix/m1.1/requirejs-magix.js (requirejs+jq类库，Magix核心未压缩版)<br />
+http://a.tbcdn.cn/apps/e/magix/m1.1/requirejs-magix-min.js (requirejs+jq类库，Magix核心压缩版)<br />
+http://a.tbcdn.cn/apps/e/magix/m1.1/requirejs-magix-mxext.js (requirejs+jq类库，Magix核心与扩展未压缩版)<br />
+http://a.tbcdn.cn/apps/e/magix/m1.1/requirejs-magix-mxext-min.js (requirejs+jq类库，Magix核心与扩展压缩版)<br /></p>
 <h4 id="10">桌面版1.0</h4>
-<p>http://a.tbcdn.cn/apps/e/magix/1.0/kissy-magix.js(KISSY类库，Magix核心未压缩版)
-http://a.tbcdn.cn/apps/e/magix/1.0/kissy-magix-min.js(KISSY类库，Magix核心压缩版)
-http://a.tbcdn.cn/apps/e/magix/1.0/kissy-magix-mxext.js(KISSY类库，Magix核心与扩展未压缩版)
-http://a.tbcdn.cn/apps/e/magix/1.0/kissy-magix-mxext-min.js(KISSY类库，Magix核心与扩展压缩版)</p>
-<p>http://a.tbcdn.cn/apps/e/magix/1.0/seajs-magix.js(sejs+jq类库，Magix核心未压缩版)
-http://a.tbcdn.cn/apps/e/magix/1.0/seajs-magix-min.js(sejs+jq类库，Magix核心压缩版)
-http://a.tbcdn.cn/apps/e/magix/1.0/seajs-magix-mxext.js(sejs+jq类库，Magix核心与扩展未压缩版)
-http://a.tbcdn.cn/apps/e/magix/1.0/seajs-magix-mxext-min.js(sejs+jq类库，Magix核心与扩展压缩版)</p>
-<p>http://a.tbcdn.cn/apps/e/magix/1.0/requirejs-magix.js(requirejs+jq类库，Magix核心未压缩版)
-http://a.tbcdn.cn/apps/e/magix/1.0/requirejs-magix-min.js(requirejs+jq类库，Magix核心压缩版)
-http://a.tbcdn.cn/apps/e/magix/1.0/requirejs-magix-mxext.js(requirejs+jq类库，Magix核心与扩展未压缩版)
-http://a.tbcdn.cn/apps/e/magix/1.0/requirejs-magix-mxext-min.js(requirejs+jq类库，Magix核心与扩展压缩版)</p>
+<p>http://a.tbcdn.cn/apps/e/magix/1.0/kissy-magix.js (KISSY类库，Magix核心未压缩版)<br />
+http://a.tbcdn.cn/apps/e/magix/1.0/kissy-magix-min.js (KISSY类库，Magix核心压缩版)<br />
+http://a.tbcdn.cn/apps/e/magix/1.0/kissy-magix-mxext.js (KISSY类库，Magix核心与扩展未压缩版)<br />
+http://a.tbcdn.cn/apps/e/magix/1.0/kissy-magix-mxext-min.js (KISSY类库，Magix核心与扩展压缩版)<br /></p>
+<p>http://a.tbcdn.cn/apps/e/magix/1.0/seajs-magix.js (sejs+jq类库，Magix核心未压缩版)<br />
+http://a.tbcdn.cn/apps/e/magix/1.0/seajs-magix-min.js (sejs+jq类库，Magix核心压缩版)<br />
+http://a.tbcdn.cn/apps/e/magix/1.0/seajs-magix-mxext.js (sejs+jq类库，Magix核心与扩展未压缩版)<br />
+http://a.tbcdn.cn/apps/e/magix/1.0/seajs-magix-mxext-min.js (sejs+jq类库，Magix核心与扩展压缩版)<br /></p>
+<p>http://a.tbcdn.cn/apps/e/magix/1.0/requirejs-magix.js (requirejs+jq类库，Magix核心未压缩版)<br />
+http://a.tbcdn.cn/apps/e/magix/1.0/requirejs-magix-min.js (requirejs+jq类库，Magix核心压缩版)<br />
+http://a.tbcdn.cn/apps/e/magix/1.0/requirejs-magix-mxext.js (requirejs+jq类库，Magix核心与扩展未压缩版)<br />
+http://a.tbcdn.cn/apps/e/magix/1.0/requirejs-magix-mxext-min.js (requirejs+jq类库，Magix核心与扩展压缩版)<br /></p>
 <h2 id="magix-11magix10">Magix 1.1与Magix1.0的使用差异：</h2>
 <h5 id="pc10pc11">由于移动版本滞后于pc版本，因此在1.0这个版本上，在移动端进行新功能的开发与测试，稳定后会升级到后续的pc1.1版本中</h5>
-<h4 id="modelmanager4wzxhzdk12">ModelManager中的4处回调参数调整：<br /></h4>
+<h4 id="modelmanager4wzxhzdk48">ModelManager中的4处回调参数调整：<br /></h4>
 <p>1.fetchAll调整<br />
    原来fetchAll回调参数：<br /></p>
 <pre><code>fetchAll([{},{},...],function(m1,m2,m3...,errs){//model对象在前 error对象在后
