--- a/README.html
+++ b/README.html
@@ -161,8 +161,7 @@ http://a.tbcdn.cn/apps/e/magix/1.0/requirejs-magix-min.js (requirejs+jq类库，
 http://a.tbcdn.cn/apps/e/magix/1.0/requirejs-magix-mxext.js (requirejs+jq类库，Magix核心与扩展未压缩版)<br />
 http://a.tbcdn.cn/apps/e/magix/1.0/requirejs-magix-mxext-min.js (requirejs+jq类库，Magix核心与扩展压缩版)<br /></p>
 <h2 id="magix-11magix10">Magix 1.1与Magix1.0的使用差异：</h2>
-<h5 id="pc10pc11">由于移动版本滞后于pc版本，因此在1.0这个版本上，在移动端进行新功能的开发与测试，稳定后会升级到后续的pc1.1版本中</h5>
-<h4 id="modelmanager4wzxhzdk48">ModelManager中的4处回调参数调整：<br /></h4>
+<h4 id="modelmanager4wzxhzdk49">ModelManager中的4处回调参数调整：<br /></h4>
 <p>1.fetchAll调整<br />
    原来fetchAll回调参数：<br /></p>
 <pre><code>fetchAll([{},{},...],function(m1,m2,m3...,errs){//model对象在前 error对象在后
@@ -268,8 +267,33 @@ http://a.tbcdn.cn/apps/e/magix/1.0/requirejs-magix-mxext-min.js (requirejs+jq类
 
 <p>Magix不再做为全局变量提供，请require magix/magix模块使用里面的功能</p>
 <p>项目包配置：<br />
-原来在Magix.start中传递appHome appTag之类的Magix会自动帮你配置包信息，现在需要开发者自已配置<br />
-建议开发者传递appRoot参数，以方便Magix或项目中使用app的根目录</p>
+原来在Magix.start中传递appHome appTag之类的Magix会自动帮你配置包信息，现在需要开发者自已配置<br /></p>
+<pre><code>原来:
+Magix.start({
+   appHome:'./',
+   appTag:new Date().getTime(),
+   debug:true
+   //...
+});
+
+现在：
+KISSY.use('magix/magix',function(S,Magix){
+   S.config({
+      packages:[
+         {
+            name:'app',
+            tag:new Date().getTime()
+         }
+      ]
+   });
+
+   Magix.start({
+      iniFile:'app/ini',
+      rootId:'magix_vf_root'
+   });
+});
+</code></pre>
+
 <p>移除postMessageTo,receiveMessage
 <br />
 <br />
