update model manager callback parameters

--- a/README.html
+++ b/README.html
@@ -185,7 +185,7 @@ http://a.tbcdn.cn/apps/e/magix/1.0/requirejs-magix-mxext-min.js (requirejs+jq类
 
 <p><br />
 现在调整为：<br /></p>
-<pre><code>fetchOrder([{},{},...],function(errs,model,preResults){//err与preError合并
+<pre><code>fetchOrder([{},{},...],function(errs,model,preErrors,preResults){//
 
 });
 </code></pre>
@@ -199,7 +199,7 @@ http://a.tbcdn.cn/apps/e/magix/1.0/requirejs-magix-mxext-min.js (requirejs+jq类
 
 <p><br />
 现在调整为：<br /></p>
-<pre><code>fetchOne([{},{},...],function(err,model,preResults){//err与preError合并
+<pre><code>fetchOne([{},{},...],function(err,model,preErrors,preResults){//
 
 });
 </code></pre>
