--- a/README.html
+++ b/README.html
@@ -161,7 +161,7 @@ http://a.tbcdn.cn/apps/e/magix/1.0/requirejs-magix-min.js (requirejs+jq类库，
 http://a.tbcdn.cn/apps/e/magix/1.0/requirejs-magix-mxext.js (requirejs+jq类库，Magix核心与扩展未压缩版)<br />
 http://a.tbcdn.cn/apps/e/magix/1.0/requirejs-magix-mxext-min.js (requirejs+jq类库，Magix核心与扩展压缩版)<br /></p>
 <h2 id="magix-11magix10">Magix 1.1与Magix1.0的使用差异：</h2>
-<h4 id="modelmanager4wzxhzdk49">ModelManager中的4处回调参数调整：<br /></h4>
+<h4 id="modelmanager4wzxhzdk51">ModelManager中的4处回调参数调整：<br /></h4>
 <p>1.fetchAll调整<br />
    原来fetchAll回调参数：<br /></p>
 <pre><code>fetchAll([{},{},...],function(m1,m2,m3...,errs){//model对象在前 error对象在后
@@ -249,6 +249,79 @@ http://a.tbcdn.cn/apps/e/magix/1.0/requirejs-magix-mxext-min.js (requirejs+jq类
 });
 </code></pre>
 
+<h4 id="modelmodelmanager">model与modelmanager</h4>
+<p>原来：</p>
+<pre><code>//app base model
+
+return MxextMode.extend({
+   urlMap:{
+      groups:{
+         i1:'/api/userinfo.json',
+         i2:'/api/list.json'
+      }
+   },
+   sync:function(options){
+      var url=this.url();
+      IO({
+         url:url,
+         //...
+         success:options.success,
+         error:options.error
+      });
+   }
+});
+
+//app model manager
+
+var MM=MxextManager.create(AppBaseModel);
+
+MM.registerModels([
+   name:'Interface_1',
+   uri:'groups:i1',
+   urlParams:{
+      action:'get'
+   }
+]);
+
+</code></pre>
+
+<p>现在：</p>
+<pre><code>//app base model
+
+return MxextMode.extend({
+   sync:function(callback){
+      var url=this.get('url');
+
+      IO({
+         url:url,
+         //...
+         success:function(data){
+            callback(null,data);
+         },
+         error:function(msg){
+            callback(msg||'request error');
+         }
+      });
+   }
+});
+
+//app model manager
+
+var MM=MxextManager.create(AppBaseModel);
+
+MM.registerModels([
+   name:'Interface_1',
+   url:'/api/getuserinfo.json',
+   urlParams:{
+      action:'get'
+   }
+]);
+
+</code></pre>
+
+<p>原来需要在model的urlMaps中定义之后，在modelmanager中再次定义，1.1直接把url放在modelmanager中进行维护，model只做parse和sync<br />
+即：原来在model中填写的三个空：urlMaps,parse,sync在1.1中变为两个空：parse,sync</p>
+<p><br /><br /></p>
 <h4 id="_2">其它</h4>
 <p>启动入口：<br />
 原来：</p>
