--- a/ad-demo/index.html
+++ b/ad-demo/index.html
@@ -9,9 +9,7 @@
 <body>
     <div id="magix_vf_root"></div>
     <div class="app_progress_bar" id="magix_percent"></div>
-    <script type="text/javascript" src="http://a.tbcdn.cn/??s/kissy/1.3.0/seed.js"></script>
-    <script type="text/javascript" src="http://a.tbcdn.cn/??apps/e/magix/1.1/kissy-magix-mxext.js"></script>
-    <script type="text/javascript" src="http://a.tbcdn.cn/??apps/e/brix/2.0/brix.js"></script>
+    <script type="text/javascript" src="http://a.tbcdn.cn/??s/kissy/1.3.0/seed.js,apps/e/brix/2.0/brix.js，apps/e/magix/1.1/kissy-magix-mxext.js"></script>
     <script type="text/javascript" src="app/progress.js"></script>
     <script type="text/javascript">
     KISSY.use('magix/magix,ua',function(S,Magix){
