--- a/ad-demo/index.html
+++ b/ad-demo/index.html
@@ -12,7 +12,7 @@
     <script type="text/javascript" src="http://a.tbcdn.cn/??s/kissy/1.3.0/seed.js,apps/e/brix/2.0/brix.js,apps/e/magix/1.1/kissy-magix-mxext.js"></script>
     <script type="text/javascript" src="app/progress.js"></script>
     <script type="text/javascript">
-    KISSY.use('magix/magix,ua',function(S,Magix){
+    KISSY.use('magix/magix',function(S,Magix){
         S.config({
             packages:[{
                 name:'app',
@@ -22,10 +22,15 @@
         });
         Magix.start({
             defaultView:'app/views/default',
+            notFoundView:'app/views/404',
             defaultPathname:'/home',
             extensions:['app/assets/blue.css','app/pc-events','app/vdata','app/brix2','app/statistics','app/mmstatistics'],//可以换肤,提供n多扩展
-            routes:function(pathname){
-                return this.defaultView;
+            routes:{
+                '/examples/table-sortable':'app/views/default',
+                '/examples/renderer':'app/views/default',
+                '/brixes/dialog':'app/views/default',
+                '/brixes/dropdown':'app/views/default',
+                '/brixes/tip':'app/views/default'
             }
         });
     });
